# GordianNet

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gordian_net.pc.in  tsan_suppressions.txt
.github/workflows/: ci.yml
cli/: main.cpp
docs/: ARCHITECTURE.md  SECURITY.md
include/: gordian_net.h
src/: gordian_node.cpp  gordian_node.hpp
tests/: concurrent_send_test.cpp  error_path_test.cpp  framing_test.cpp  loopback_test.cpp  shutdown_test.cpp
